2013-05-30 Thu  Jari Aalto  <jari.aalto@cante.net>

	* README.rst (USAGE): Broaden example.

	* makefile.sh (CreateUser): improve chsh message.
	(Help): update --force option. The list of allowed commands must
	be on standard PATH.

2013-05-29 Wed  Jari Aalto  <jari.aalto@cante.net>

	* makefile.sh (Help): Fix typo.
	(Main): Die on unknown option.
	(Help): Add that combining short options are not supported.

	* bin/restricted-shell-create.5.pod: Fix typo.
	(BUGS): Add that combining short options are not supported.

	* Makefile (help): Suppress displaying command.

2012-06-18 Mon  Jari Aalto  <jari.aalto@cante.net>

	* makefile.sh (Main): Correct typo from $chwon to $chown.

2012-01-31  Jari Aalto  <jari.aalto@cante.net>

	* bin/restricted-shell-create.5.pod: (OPTIONS): Add option
	--password. Move option --help to the end (GNU convention).
	(BUGS): Mention that rbash behavior does not work correctly
	after su(1). This is a known bug in rbash(1).

	* bin/restricted-shell-create.sh: Fix typo in comment.

	* makefile.sh: (Main): Add option
	--password. Chwon HOME directory with correct user:group.
	(GetUserGroup): New.
	(CreateUser): Call useradd(1) with --skel, --password
	--create-home as needed.
	(Chattr): Disable chattr(1).
	(CopyFiles): Do not use unreliable ~LOGIN.
	(GetHomeDir): New.

2012-01-13 Fri  Jari Aalto  <jari.aalto@cante.net>

	* Makefile (doc): New rule.

	* bin/restricted-shell-create.5.pod: Correct B<> markup.

2011-11-24  Jari Aalto  <jari.aalto@cante.net>

	* Makefile (bin/$(NAME).1): Move manpage from section 1 to 5.
	(test-git): New.

	* bin/restricted-shell-create.5.pod: Rename. Was
	bin/restricted-shell-create.1.pod.

2011-11-23  Jari Aalto  <jari.aalto@cante.net>

	* .bashrc: Document shopt commands.

	* README.rst: (REFERENCES): Remove. Move to POD.

	* makefile.sh (Main): set permissions of .ssh/authorized_keys
	and .ssh/id* files. Add section breaks and move code
	into logical blocks. If COMMANDS is empty, warn, not die.
