@@ -144,9 +144,10 @@ BUGS
     su(1) to the account. See <http://bugs.debian.org/411997>. You must use
     standard login(1) to get the expected behavior.
 
-    Due to lack of available tools in POSIX shell, combining short options
-    is not supported; .e.g. -fi. All options must be give separately using
-    spaces like in -f -i.
+    The utility uses getopt(1) to parse options if it available in $PATH. If
+    not, due to lack of proper programing language constructs in POSIX
+    shell, combining short options in form of -fi is not supported. In that
+    case, use separate options like in -f -i.
 
 ENVIRONMENT
     None.
